--- a/style.css
+++ b/style.css
@@ -1,24 +1,45 @@
-/* Basic Style */
+html {
+  box-sizing: border-box;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+h3 {
+  padding: 0;
+  margin: 0;
+}
+
 body {
+  margin: 0;
+  font-family: 'Lato', sans-serif;
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
 }
-.aaa {
+
+.container {
   width: 500px;
-  margin: 0 auto;
+  margin: 8px auto 0;
+  padding: 0px 100px 0px 100px;
+}
+
+.contant {
   display: block;
+  margin: 0 auto 24px;
   text-align: right;
 }
-.aaa img {
+
+.contant img {
   width: 100%;
 }
-.aaa .more_inf {
+.contant .more_inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.contant { text-align: center;
 }
 }
 .centered-main-page-element {
