--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ img {
   max-width: 100%;
 }
 
-h3 {
+.title {
   padding: 0;
   margin: 0;
 }
 
-body {
+.body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   background-color: #f8f8f8;
@@ -31,7 +31,7 @@ body {
   text-align: right;
 }
 
-.contant img {
+.contant-img {
   width: 100%;
 }
 .contant .more_inf {
@@ -60,22 +60,22 @@ body {
   display: flex;
 }
 
-ul {
+.task-wrap {
   margin: 0;
   padding: 0px;
 }
 
-li, 
-h3 {
+.task-item, 
+.title {
   list-style: none;
 }
 
-input,
-button {
+.input-task,
+.btn {
   outline: none;
 }
 
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -85,13 +85,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.title,
+.new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -101,7 +101,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.input-task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -114,22 +114,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.input-task:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -138,51 +138,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.task-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item > .checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.task-item > .task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.task-item > .input-task {
   width: 226px;
 }
 
-button.delete img {
+.delete-btn-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete-btn-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .tasks {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.input-task.edit {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+.edit-mode .input-task {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.edit-mode .tasks {
   display: none;
 }
