--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ img {
   max-width: 100%;
 }
 
-.title {
+h3 {
   padding: 0;
   margin: 0;
 }
 
-.body {
+body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   background-color: #f8f8f8;
@@ -25,6 +25,7 @@ img {
   padding: 0px 100px 0px 100px;
 }
 
+/* Basic Style */
 .contant {
   display: block;
   margin: 0 auto 24px;
@@ -32,61 +33,47 @@ img {
 }
 
 .contant-img {
-  width: 100%;
-}
-.contant .more_inf {
-  font-family: fantasy, cursive;
+  height: auto;
 }
 
-@media (max-width:768px) {
-	.contant { 
-		text-align: center;
-	}
+.contant-more-info {
+  font-family: 'fantasy', cursive;
+  font-size: 15px;
 }
 
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-
-.task {
-  width: 56%;
+.tasks {
   display: inline-block;
   flex-grow: 1;
+  width: 56%;
+  box-sizing: border-box;
+  font-size: 18px;
+  padding-left: 10px;
+  vertical-align: middle;
 }
 
-.task-row-wrapper {
+.add-wrap {
   display: flex;
 }
 
 .task-wrap {
-  margin: 0;
+  margin:0;
   padding: 0px;
 }
 
-.task-item, 
-.title {
-  list-style: none;
-}
-
-.input-task,
 .btn {
+  width: 60px;
+  background: transparent;
+  border: none;
+  color: #888;
+  font-size: 15px;
+  font-family: 'Lato', sans-serif;
+  cursor: pointer;
+  vertical-align: middle;
   outline: none;
 }
 
-.btn {
-  background: none;
-  border: 0px;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-
-.btn:hover {
-  color: #3a3A3a;
+.ntn:hover {
+  color: #3a3a3a;
 }
 
 /* Heading */
@@ -101,17 +88,21 @@ img {
   text-transform: uppercase;
 }
 
+.title {
+  padding: 45px 0 10px;
+}
+
 .input-task {
-  margin: 0;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  font-family: 'Lato', sans-serif;
   font-size: 18px;
+  color: #888;
   line-height: 18px;
   height: 21px;
+  margin: 0;
   padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
-  border-radius: 6px;
-  font-family: Lato, sans-serif;
-  color: #888;
 }
 
 .input-task:focus {
@@ -121,46 +112,39 @@ img {
 /* New Task */
 .new-task {
   display: block;
-  margin: 0 0 20px;
-}
-
-.new-task {
-  width: 318px;
+  margin: 0 0 22px;
 }
 
 /* Task list */
-.task-item {
+.tasks-item {
   overflow: hidden;
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
+  padding: 22px 0 20px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  list-style:none;
 }
 
-.task-item > * {
-  vertical-align: middle;
+.tasks-item:last-child {
+  padding: 22px 0 7px 0;
 }
 
-.task-item > .checkbox {
+.checkbox {
   margin: 0 10px;
 }
 
-.task-item > .task {
-  padding-left: 10px;
-  box-sizing: border-box;
-  font-size: 18px;
-  width: 226px;
+.edit {
+  flex-grow: 1;
 }
 
-.task-item > .input-task {
-  width: 226px;
+.delete-btn {
+  padding: 1px 6px 1px 15px;
 }
 
 .delete-btn-img {
   height: 2em;
   transform: rotateZ(45deg);
-  transition: transform 200ms ease-in;
+  transition: 200ms ease-in;
 }
 
 .delete-btn-img:hover {
@@ -175,14 +159,20 @@ img {
 
 /* Edit Task */
 .input-task.edit {
-  display: none;
+  display:none
 }
 
 .edit-mode .input-task {
-  display: inline-block;
-  width: 224px;
+  display:inline-block;
+  width: 224px
 }
 
 .edit-mode .tasks {
-  display: none;
+  display:none;
+}
+
+@media (max-width: 768px) {
+  .contant { 
+    text-align: center;
+  }
 }
